fix(maintainability): clean up RedisCacheAdapterInternalConditionsTest
- Remove unused imports: Duration, Optional, ArgumentCaptor, verify
- Replace deprecated Integer() constructor with Integer.valueOf()
- Remove unnecessary explanatory comments
- Reduces Maintainability issues reported by SonarQube